--- a/site1/home/Templates/home.html
+++ b/site1/home/Templates/home.html
@@ -136,7 +136,7 @@
 
         <!-- Các thuật toán không nhóm -->
         <li>
-          <a href="frequent_itemsets.html">
+          <a href="{% url 'tap_pho_bien' %}">
             <i class="fas fa-layer-group"></i>
             Tập phổ biến
           </a>
