--- a/site1/home/Templates/home.html
+++ b/site1/home/Templates/home.html
@@ -206,7 +206,7 @@
               </a>
             </li>
             <li>
-              <a href="dependency.html">
+              <a href="{% url 'dependency' %}">
                 <i class="fas fa-arrow-circle-right"></i>
                 Khảo sát phụ thuộc
               </a>
