xong nhom thuat toan xap xi

--- a/site1/home/Templates/dependency.html
+++ b/site1/home/Templates/dependency.html
@@ -261,7 +261,7 @@
               </a>
             </li>
             <li>
-              <a href="reducts.html">
+              <a href="{% url 'reduct' %}">
                 <i class="fas fa-arrow-circle-right"></i>
                 Tính reducts
               </a>
