--- a/site1/home/Templates/home.html
+++ b/site1/home/Templates/home.html
@@ -212,7 +212,7 @@
               </a>
             </li>
             <li>
-              <a href="reducts.html">
+              <a href="{% url 'reduct' %}">
                 <i class="fas fa-arrow-circle-right"></i>
                 Tính reducts
               </a>
