--- a/site1/home/Templates/home.html
+++ b/site1/home/Templates/home.html
@@ -178,13 +178,13 @@
               </a>
             </li>
             <li>
-              <a href="gini.html">
+              <a href="{% url 'gini' %}">
                 <i class="fas fa-arrow-circle-right"></i>
                 Gini
               </a>
             </li>
             <li>
-              <a href="if_then.html">
+              <a href="{% url 'if-then' %}">
                 <i class="fas fa-arrow-circle-right"></i>
                 IF - THEN
               </a>
