--- a/site1/home/Templates/home.html
+++ b/site1/home/Templates/home.html
@@ -138,17 +138,11 @@
         <li>
           <a href="{% url 'TapPhoBien' %}">
             <i class="fas fa-layer-group"></i>
-            Tập phổ biến
+            Tập phổ biến và Luật kết hợp
           </a>
         </li>
         <li>
-          <a href="association_rules.html">
-            <i class="fas fa-random"></i>
-            Luật kết hợp
-          </a>
-        </li>
-        <li>
-          <a href="attribute_correlation.html">
+          <a href="{% url 'HSTuongQuan' %}" id="popular-link">
             <i class="fas fa-chart-line"></i>
             Mức độ tương quan
           </a>
