decision tree details

--- a/site1/home/Templates/home.html
+++ b/site1/home/Templates/home.html
@@ -183,12 +183,6 @@
                 Gini
               </a>
             </li>
-            <li>
-              <a href="{% url 'if-then' %}">
-                <i class="fas fa-arrow-circle-right"></i>
-                IF - THEN
-              </a>
-            </li>
           </ul>
         </li>
 
@@ -228,7 +222,7 @@
           </a>
           <ul class="sub-menu" id="clustering">
             <li>
-              <a href="bayes.html">
+              <a href="{% url 'bayes' %}">
                 <i class="fas fa-arrow-circle-right"></i>
                 Bayes
               </a>
